@@ -1,114 +1,112 @@
-package com.len.ticketing.api.ticket;
+package com.len.ticketing.api.reservation;
 
 import com.len.ticketing.application.ticket.TicketService;
 import com.len.ticketing.common.exception.BusinessException;
 import com.len.ticketing.common.exception.ErrorCode;
-import lombok.RequiredArgsConstructor;
+import org.springframework.http.MediaType;
 import org.springframework.web.bind.annotation.*;
 
-import java.util.LinkedHashMap;
+import java.util.HashMap;
 import java.util.Map;
 
 @RestController
-@RequiredArgsConstructor
 @RequestMapping("/api/reservations")
 public class ReservationController {
 
     private final TicketService ticketService;
 
-    @PostMapping("/hold")
-    public Map<String, Object> hold(@RequestBody Map<String, Object> request) {
+    public ReservationController(TicketService ticketService) {
+        this.ticketService = ticketService;
+    }
+
+    /**
+     * 기존: Body의 queueToken만 읽었음
+     * 개선: Body queueToken이 비어있으면 Header(X-QUEUE-TOKEN)를 fallback으로 사용
+     *
+     * 요청 예시(Body):
+     * {
+     *   "scheduleId": 3,
+     *   "seatId": 2,
+     *   "userId": 1001,
+     *   "bypassQueue": false,
+     *   "queueToken": "..."
+     * }
+     *
+     * 또는 Header:
+     * X-QUEUE-TOKEN: ...
+     */
+    @PostMapping(value = "/hold", consumes = MediaType.APPLICATION_JSON_VALUE, produces = MediaType.APPLICATION_JSON_VALUE)
+    public Map<String, Object> hold(
+            @RequestBody Map<String, Object> request,
+            @RequestHeader(name = "X-QUEUE-TOKEN", required = false) String headerQueueToken
+    ) {
         Long scheduleId = toLong(request.get("scheduleId"));
-        Long seatId = toNullableLong(request.get("seatId"));
-        String seatNo = toNullableString(request.get("seatNo"));
+        Long seatId = toLong(request.get("seatId"));   // optional
+        String seatNo = toNullableString(request.get("seatNo")); // optional
         Long userId = toLong(request.get("userId"));
         boolean bypassQueue = toBoolean(request.get("bypassQueue"), false);
-        String queueToken = toNullableString(request.get("queueToken"));
 
-        if (scheduleId == null || userId == null) {
-            throw new BusinessException(ErrorCode.INVALID_REQUEST);
+        // Body 우선, 없으면 Header fallback
+        String queueToken = toNullableString(request.get("queueToken"));
+        if (isBlank(queueToken) && !isBlank(headerQueueToken)) {
+            queueToken = headerQueueToken;
         }
 
+        // (선택) Body에도 header처럼 token 이름을 다르게 보낼 수 있게 확장하고 싶으면 여기 추가 가능
+        // 예: request.get("xQueueToken") 등
+
         TicketService.HoldResult result;
+
+        // seatId 우선, seatNo는 backward-compatible
         if (seatId != null) {
             result = ticketService.holdSeatById(scheduleId, seatId, userId, bypassQueue, queueToken);
         } else {
-            if (seatNo == null || seatNo.isBlank()) {
+            if (isBlank(seatNo)) {
                 throw new BusinessException(ErrorCode.INVALID_REQUEST);
             }
             result = ticketService.holdSeat(scheduleId, seatNo, userId, bypassQueue, queueToken);
         }
 
-        Map<String, Object> body = new LinkedHashMap<>();
-        body.put("success", result.success());
-        body.put("message", result.message());
-        body.put("reservationId", result.reservationId());
-        return body;
+        Map<String, Object> res = new HashMap<>();
+        res.put("success", result.success());
+        res.put("message", result.message());
+        res.put("reservationId", result.reservationId());
+        return res;
     }
 
-    @PostMapping("/release")
-    public Map<String, Object> release(@RequestBody Map<String, Object> request) {
-        Long scheduleId = toLong(request.get("scheduleId"));
-        String seatNo = toNullableString(request.get("seatNo"));
-        Long userId = toLong(request.get("userId"));
+    // ======================
+    // helpers
+    // ======================
 
-        if (scheduleId == null || userId == null || seatNo == null || seatNo.isBlank()) {
-            throw new BusinessException(ErrorCode.INVALID_REQUEST);
-        }
-
-        ticketService.releaseSeat(scheduleId, seatNo, userId);
-
-        Map<String, Object> body = new LinkedHashMap<>();
-        body.put("success", true);
-        body.put("message", "좌석 선점이 해제되었습니다.");
-        return body;
+    private static boolean isBlank(String s) {
+        return s == null || s.trim().isEmpty();
     }
 
-    @PostMapping("/confirm")
-    public Map<String, Object> confirm(@RequestBody Map<String, Object> request) {
-        Long scheduleId = toLong(request.get("scheduleId"));
-        String seatNo = toNullableString(request.get("seatNo"));
-        Long userId = toLong(request.get("userId"));
-
-        if (scheduleId == null || userId == null || seatNo == null || seatNo.isBlank()) {
-            throw new BusinessException(ErrorCode.INVALID_REQUEST);
-        }
-
-        ticketService.confirmSeat(scheduleId, seatNo, userId);
-
-        Map<String, Object> body = new LinkedHashMap<>();
-        body.put("success", true);
-        body.put("message", "예매가 확정되었습니다.");
-        return body;
-    }
-
-    // ---------- helpers ----------
-    private Long toLong(Object v) {
+    private static String toNullableString(Object v) {
         if (v == null) return null;
-        if (v instanceof Number n) return n.longValue();
-        try {
-            String s = String.valueOf(v).trim();
-            if (s.isBlank()) return null;
-            return Long.parseLong(s);
-        } catch (Exception e) {
-            throw new BusinessException(ErrorCode.INVALID_REQUEST);
-        }
+        String s = String.valueOf(v);
+        if (s == null) return null;
+        s = s.trim();
+        return s.isEmpty() ? null : s;
     }
 
-    private Long toNullableLong(Object v) {
-        return toLong(v);
-    }
-
-    private String toNullableString(Object v) {
-        if (v == null) return null;
-        String s = String.valueOf(v).trim();
-        return s.isBlank() ? null : s;
-    }
-
-    private boolean toBoolean(Object v, boolean defaultValue) {
+    private static boolean toBoolean(Object v, boolean defaultValue) {
         if (v == null) return defaultValue;
         if (v instanceof Boolean b) return b;
         String s = String.valueOf(v).trim().toLowerCase();
-        return "true".equals(s) || "1".equals(s) || "y".equals(s) || "yes".equals(s);
+        if (s.isEmpty()) return defaultValue;
+        return s.equals("true") || s.equals("1") || s.equals("yes") || s.equals("y");
+    }
+
+    private static Long toLong(Object v) {
+        if (v == null) return null;
+        if (v instanceof Number n) return n.longValue();
+        String s = String.valueOf(v).trim();
+        if (s.isEmpty()) return null;
+        try {
+            return Long.parseLong(s);
+        } catch (NumberFormatException e) {
+            throw new BusinessException(ErrorCode.INVALID_REQUEST);
+        }
     }
 }
